src/components/header/header.module.css
.headerContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 32px 0px 16px;
  width: 1440px;
}

.headerLogo {
  display: flex;
  align-items: center;
  gap: 12px;
  margin-left: 64px;
}

.headerLogo h1 {
  color: var(--gray-one);
  font: 700 32px var(--roboto-condensed);
}

.headerLogo span {
  color: var(--yellow-one);
}

.headerContainer nav {
  display: flex;
  align-items: center;
  gap: 12px;
}

.headerContainer nav a {
  color: var(--gray-one);
  font: 600 18px var(--sora);
  transition-duration: 0.3s;
  padding: 12.5px 24px;
  border-radius: 60px;
}

.headerContainer nav a:hover {
  background-color: hsla(198, 52%, 22%, 0.1);
}

.loginContainer {
  display: flex;
  gap: 8px;
  margin-right: 64px;
}

.loginContainer button {
  padding: 12.5px 24px;
  border-radius: 60px;
  transition-duration: 0.3s;
}

.loginContainer :nth-child(2) {
  background-color: var(--gray-one);
  color: var(--background-color);
}

